--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@base-ui/react": "^1.0.0",
+    "@dnd-kit/core": "^6.3.1",
     "@hugeicons/core-free-icons": "^3.0.0",
     "@hugeicons/react": "^1.1.2",
     "class-variance-authority": "^0.7.1",
